--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^3.25.67",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "expo-notifications": "~0.31.4",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
