--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "expo": "53.0.16",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-crypto": "^14.1.5",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.2",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -43,9 +46,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^3.25.67",
-    "zustand": "^5.0.6",
-    "expo-notifications": "~0.31.4",
-    "expo-device": "~7.1.4"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
