--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@react-navigation/native": "^7.1.6",
     "expo": "53.0.19",
     "expo-blur": "~14.1.5",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.6",
     "expo-crypto": "^14.1.5",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-notifications": "~0.31.4",
@@ -38,6 +40,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-hyperlink": "^0.0.22",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-render-html": "^6.3.4",
@@ -46,9 +49,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^3.25.67",
-    "zustand": "^5.0.6",
-    "expo-clipboard": "~7.1.5",
-    "expo-image-manipulator": "~13.1.7"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
