Edit "앱 이름 변경"

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "inschoolz-app",
+    "name": "인스쿨즈",
     "slug": "inschoolz-app",
     "version": "1.0.1",
     "orientation": "portrait",
@@ -13,12 +13,14 @@
       "bundleIdentifier": "com.onmindlab.inschoolz",
       "googleServicesFile": "./GoogleService-Info.plist",
       "buildNumber": "2",
+      "displayName": "인스쿨즈",
       "infoPlist": {
         "UIBackgroundModes": ["remote-notification"],
         "NSCameraUsageDescription": "This app uses the camera to let you take photos for your profile and posts.",
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to let you select images for your profile and posts.",
         "NSMicrophoneUsageDescription": "This app may need microphone access for video features.",
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "CFBundleDisplayName": "인스쿨즈"
       }
     },
     "android": {
