Fix Error "서명키"

--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,7 @@
       "autoIncrement": true,
       "android": {
         "buildType": "app-bundle",
-        "credentialsSource": "remote"
+        "credentialsSource": "local"
       }
     }
   },
