--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@
    EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=inschoolz.appspot.com
    EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=702584515843
    EXPO_PUBLIC_FIREBASE_APP_ID=1:702584515843:ios:64ee5674c8a9d1ac714d36
+   EXPO_PUBLIC_RECAPTCHA_SITE_KEY=6LdWZqwrAAAAAGwzb3hss860jQgsCiOX_XnnypHr
