--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-constants": "~17.1.6",
     "expo-crypto": "^14.1.5",
     "expo-device": "~7.1.4",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
@@ -35,6 +36,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "firebase": "^11.10.0",
     "react": "19.0.0",
@@ -50,8 +52,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^3.25.67",
-    "zustand": "^5.0.6",
-    "expo-updates": "~0.28.17"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
