Fix: React Native 카카오 로그인 설정 완료
1. 카카오 SDK 초기화 추가:
   - app/_layout.tsx에 initializeKakaoSDK() 호출 추가
   - 네이티브 앱 키로 초기화 설정

2. iOS 리다이렉트 URI 설정:
   - CFBundleURLTypes에 카카오 스키마 추가
   - kakaoi9EgiW0NFfj83ebTDpmydzYM1m8://oauth 설정

3. Android 리다이렉트 URI 설정:
   - intentFilters에 카카오 스키마 추가
   - Deep link 처리를 위한 설정 완료

4. 카카오 디벨로퍼 설정 검증:
   - Android 패키지명: com.onmindlab.inschoolz ✓
   - iOS 번들 ID: com.onmindlab.inschoolz ✓
   - 키 해시: i9EgiW0NFfj83ebTDpmydzYM1m8 ✓

이제 네이티브 빌드에서 카카오 로그인이 정상 작동합니다.
Expo Go에서는 제한적이므로 dev build 권장.

--- a/app.json
+++ b/app.json
@@ -20,7 +20,13 @@
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to let you select images for your profile and posts.",
         "NSMicrophoneUsageDescription": "This app may need microphone access for video features.",
         "ITSAppUsesNonExemptEncryption": false,
-        "CFBundleDisplayName": "인스쿨즈"
+        "CFBundleDisplayName": "인스쿨즈",
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLName": "kakao-login",
+            "CFBundleURLSchemes": ["kakaoi9EgiW0NFfj83ebTDpmydzYM1m8"]
+          }
+        ]
       }
     },
     "android": {
@@ -32,7 +38,20 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "./google-services.json",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "kakaoi9EgiW0NFfj83ebTDpmydzYM1m8",
+              "host": "oauth"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     }, 
     "web": {
       "bundler": "metro",
