Fix: 카카오 로그인 설정 수정 - Expo 플러그인 방식 적용
- initializeKakaoSDK 함수 제거 (존재하지 않음)
- @react-native-seoul/kakao-login Expo 플러그인 설정 추가
- 네이티브 앱 키를 플러그인 설정에 포함

주의: Expo Go에서는 완전한 테스트 불가
권장: 'expo run:android' 또는 EAS dev build 사용

--- a/app.json
+++ b/app.json
@@ -68,6 +68,13 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "@react-native-seoul/kakao-login",
+        {
+          "nativeAppKey": "i9EgiW0NFfj83ebTDpmydzYM1m8",
+          "displayName": "인스쿨즈"
+        }
       ]
     ],
     "experiments": {
