--- a/app.json
+++ b/app.json
@@ -20,13 +20,7 @@
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to let you select images for your profile and posts.",
         "NSMicrophoneUsageDescription": "This app may need microphone access for video features.",
         "ITSAppUsesNonExemptEncryption": false,
-        "CFBundleDisplayName": "인스쿨즈",
-        "CFBundleURLTypes": [
-          {
-            "CFBundleURLName": "kakao-login",
-            "CFBundleURLSchemes": ["kakaoi9EgiW0NFfj83ebTDpmydzYM1m8"]
-          }
-        ]
+        "CFBundleDisplayName": "인스쿨즈"
       }
     },
     "android": {
@@ -38,20 +32,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "googleServicesFile": "./google-services.json",
-      "intentFilters": [
-        {
-          "action": "VIEW",
-          "autoVerify": true,
-          "data": [
-            {
-              "scheme": "kakaoi9EgiW0NFfj83ebTDpmydzYM1m8",
-              "host": "oauth"
-            }
-          ],
-          "category": ["BROWSABLE", "DEFAULT"]
-        }
-      ]
+      "googleServicesFile": "./google-services.json"
     }, 
     "web": {
       "bundler": "metro",
@@ -59,7 +40,6 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-dev-client",
       "expo-router",
       [
         "expo-splash-screen",
@@ -68,13 +48,6 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
-        }
-      ],
-      [
-        "@react-native-seoul/kakao-login",
-        {
-          "nativeAppKey": "i9EgiW0NFfj83ebTDpmydzYM1m8",
-          "displayName": "인스쿨즈"
         }
       ]
     ],
