--- a/app.json
+++ b/app.json
@@ -20,7 +20,14 @@
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to let you select images for your profile and posts.",
         "NSMicrophoneUsageDescription": "This app may need microphone access for video features.",
         "ITSAppUsesNonExemptEncryption": false,
-        "CFBundleDisplayName": "인스쿨즈"
+        "CFBundleDisplayName": "인스쿨즈",
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLName": "kakao",
+            "CFBundleURLSchemes": ["kakao380177b185226c4935a7f293190afc46"]
+          }
+        ],
+        "LSApplicationQueriesSchemes": ["kakaokompassauth", "kakaolink"]
       }
     },
     "android": {
@@ -32,7 +39,18 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "./google-services.json",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "data": [
+            {
+              "scheme": "kakao380177b185226c4935a7f293190afc46"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     }, 
     "web": {
       "bundler": "metro",
@@ -49,6 +67,13 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "@react-native-seoul/kakao-login",
+        {
+          "kakaoAppKey": "380177b185226c4935a7f293190afc46",
+          "kakaoUrlScheme": "kakao380177b185226c4935a7f293190afc46"
+        }
       ]
     ],
     "experiments": {
@@ -58,7 +83,8 @@
       "router": {},
       "eas": {
         "projectId": "66ad576c-df73-47e1-ab61-5295a3174493"
-      }
+      },
+      "kakaoAppKey": "380177b185226c4935a7f293190afc46"
     }
   }
 }
