--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.6",
     "expo-crypto": "^14.1.5",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
@@ -52,8 +53,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^3.25.67",
-    "zustand": "^5.0.6",
-    "expo-dev-client": "~5.2.4"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
