Fix Error "android credentials"

--- a/eas.json
+++ b/eas.json
@@ -17,7 +17,7 @@
       "channel": "production",
       "android": {
         "buildType": "app-bundle",
-        "credentialsSource": "local"
+        "credentialsSource": "remote"
       }
     }
   },
