--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,7 @@ allprojects {
     google()
     mavenCentral()
     maven { url 'https://www.jitpack.io' }
+    maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
   }
 }
 
