--- a/eas.json
+++ b/eas.json
@@ -27,6 +27,9 @@
         "track": "internal",
         "releaseStatus": "draft",
         "changesNotSentForReview": false
+      },
+      "ios": {
+        "ascAppId": "6456789025"
       }
     }
   }
