--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "firebase": "^11.10.0",
+    "query-string": "^7.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
