--- a/app.json
+++ b/app.json
@@ -68,6 +68,7 @@
     },
     "plugins": [
       "expo-router",
+      "expo-apple-authentication",
       [
         "expo-splash-screen",
         {
