--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "53.0.22",
+    "expo-apple-authentication": "^7.2.4",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
     "expo-clipboard": "~7.1.5",
