--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inschoolz-app",
   "main": "expo-router/entry",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -10,64 +10,64 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-kakao/core": "^2.3.0",
     "@react-native-kakao/user": "^2.3.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "expo": "53.0.22",
-    "expo-apple-authentication": "^7.2.4",
-    "expo-blur": "~14.1.5",
-    "expo-build-properties": "~0.14.8",
-    "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.6",
-    "expo-crypto": "^14.1.5",
-    "expo-dev-client": "~5.2.4",
-    "expo-device": "~7.1.4",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-image-picker": "^16.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-notifications": "~0.31.4",
-    "expo-router": "~5.1.5",
-    "expo-sharing": "^13.1.5",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.11",
-    "expo-updates": "~0.28.17",
-    "expo-web-browser": "~14.2.0",
+    "expo": "^54.0.2",
+    "expo-apple-authentication": "~8.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-build-properties": "~1.0.8",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.8",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.12",
+    "expo-device": "~8.0.7",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.8",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.11",
+    "expo-router": "~6.0.1",
+    "expo-sharing": "~14.0.7",
+    "expo-splash-screen": "~31.0.9",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.10",
+    "expo-web-browser": "~15.0.7",
     "firebase": "^11.10.0",
     "query-string": "6.14.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-google-mobile-ads": "^15.7.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-pell-rich-editor": "^1.9.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.0",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@expo/metro-config": "^0.20.17",
+    "@expo/metro-config": "~54.0.2",
     "@types/node": "^24.0.10",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "resolutions": {
     "query-string": "6.14.1"
