--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ EXPO_PUBLIC_FIREBASE_PROJECT_ID=inschoolz
 EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=inschoolz.appspot.com
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=702584515843
 EXPO_PUBLIC_FIREBASE_APP_ID=1:702584515843:ios:64ee5674c8a9d1ac714d36
+EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-3JG849FH6X
 EXPO_PUBLIC_RECAPTCHA_SITE_KEY=6LdWZqwrAAAAAGwzb3hss860jQgsCiOX_XnnypHr
 
 NEXT_PUBLIC_KAKAO_APP_KEY=380177b185226c4935a7f293190afc46
