--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-kakao/core": "^2.3.0",
@@ -18,7 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "expo": "^54.0.2",
+    "expo": "54.0.6",
     "expo-apple-authentication": "~8.0.7",
     "expo-blur": "~15.0.7",
     "expo-build-properties": "~1.0.8",
@@ -34,9 +35,9 @@
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.11",
-    "expo-router": "~6.0.1",
+    "expo-router": "~6.0.3",
     "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.9",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
@@ -57,6 +58,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.1",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
   },
