Add Feature "학교 급식 메뉴"

--- a/.env
+++ b/.env
@@ -20,3 +20,6 @@ FIREBASE_CLIENT_ID=109288666163900087649
 # Firebase Web Push VAPID Key
 NEXT_PUBLIC_FIREBASE_VAPID_KEY=BMC1SLYGnI6Cuw3-p8Zk1ROZ2euag_03-7vclkVtgyw6eR-rvpW96WgVGwG4GE12s9ZvbWK4_d3QOSSHtsSCsRo
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LdWZqwrAAAAAGwzb3hss860jQgsCiOX_XnnypHr
+
+EXPO_PUBLIC_NEIS_API_KEY=77d72fb342894767a8955c815fbf7fe1
+NEIS_API_KEY=77d72fb342894767a8955c815fbf7fe1
