--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-kakao/core": "^2.3.0",
     "@react-native-kakao/user": "^2.3.0",
     "@react-native-picker/picker": "2.11.1",
