--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inschoolz-app",
   "main": "expo-router/entry",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -52,6 +52,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-google-mobile-ads": "^15.7.0",
     "react-native-hyperlink": "^0.0.22",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-render-html": "^6.3.4",
